Finished projects and added personal info

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 
 	<title>Piotr Zychlinski</title>
@@ -26,20 +27,55 @@
 		<ul id="toggleMenu">
 			<li><a class="nav-link active" href="#">Home</a></li>
 			<li><a class="nav-link" href="projects.html"> Projects</a></li>
-			<li><a class="nav-link" href="#">CV</a></li>
+			<li><a class="nav-link" href="cv.html">CV</a></li>
 		</ul> 
 	</div>
 
 	<div id="content">
 		<p id="intro">I am a first year student at the University of Warwick currently pursuing a bachelor's degree in CS. I am currently working towards becoming a full-stack developer hence I am most interested in software development.</p>
+		<div id="hobbies">
+		<h2>Hobbies</h2>
+		<uL>
+			<li>Weightlifting (85kg benchpress, 110kg squat @ 75kg BW)</li>
+			<li>Badminton</li>
+			<li><a href="https://play.google.com/store/apps/developer?id=Pzet">App Development</a></li>
+			<li>Reading</li>
+		</uL>
+		</div>
+		<div id="readingList">
+			<h2>Reading List</h2>
+			<h3>Fiction</h3>
+			<ul>
+				<li><b>The Witcher Series</b> - Andrzej Sapkowski</li>
+				<li><b>Metro 2033</b> - Dmitry Glukhovsky</li>
+				<li><b>Roadside Picnic</b> - Arkady Strugatsky and Boris Strugatsky</li>
+				<li><b>Gates of Fire</b> - Steven Pressfield</li>
+				<li><b>Maze Runner</b> - James Dashner</li>
+			</ul>
+			<h3>Non-Fiction</h3>
+			<h4>Technical</h4>
+			<ul>
+				<li><b>The C Programming Language</b> - Brian W. Kernighan, Dennis M. Ritchie</li>
+				<li><b>Clean Code: A Handbook of Agile Software Craftsmanship</b> - Robert C. Martin</li>
+			</ul>
+			<h4>Non-Technical</h4>
+			<ul>
+				<li><b>The Rise of Theodore Roosevelt</b> - Edmund Morris</li>
+				<li><b>Deep Work</b> - Cal Newport</li>
+				<li><b>Bigger Leaner Stronger: The Simple Science of Building the Ultimate Male Body</b> - Micheal Matthews</li>
+				<li><b>The Mundanity of Excellence</b> - Daniel F. Chambliss</li>
+				<li><b>Ego is the Enemy</b> - Ryan Holiday</li>
+				<li><b>Peak: Secrets from the New Science of Expertise</b> - Anders Ericsson</li>
+			</ul>
+		</div>
 	</div>
 	
 	<footer>
 	  	<div>
 	        <h3>contact details:</h5>
 	        <ul>
-	        	<li>Number: 07732827322</li>
-	        	<li>Email: testEmail@test.com</li>
+				<li>Number: -</li>
+				<li>Email: soniapiotr@gmail.com</li>
 	        </ul>
 	  	</div>
 	</footer>
