--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 
 	<title>My projects</title>
 
 </head>
 <body>
+
 	<div id="navbar">
 		<h1 id="title">Piotr Zychlinski</h1>
 
@@ -24,58 +26,81 @@
 		
 		<ul id="toggleMenu">
 			<li><a class="nav-link active" href="/">Home</a></li>
-			<li><a class="nav-link" href="projects.html"> Projects</a></li>
-			<li><a class="nav-link" href="/">CV</a></li>
+			<li><a class="nav-link" href="projects.html">Projects</a></li>
+			<li><a class="nav-link" href="cv.html">CV</a></li>
 		</ul> 
 	</div>
 
 	<div id="content">
 
 		<div class = "project">
-			<h2>Companion App</h2>
-			<img src="https://picsum.photos/400/300">
-			<p> 
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat vel tortor nec pulvinar. Donec fermentum erat ac sem congue pellentesque. Nunc varius, lacus at interdum molestie, metus magna pulvinar metus, vitae volutpat ante risus vel felis.
-			</p>
-			<button>View on GitHub</button>
+			<h2>NMSC</h2>
+			<img src="assets/showcase_smaller.png">
+			<div class = "projectDescription">
+				<h3>Flutter | Dart</h3>
+				<p> 
+					A companion app to the popular space exploration game No Man's Sky. <br><br> As of 18/04/2022, the app has over 400 downloads on the Google play store.
+				</p>
+			</div>
+			<div class="buttonRow">
+				<a target="_blank" href="https://github.com/pzet123/NMS_Companions"><button>View on GitHub</button></a>
+				<a target="_blank" href="https://play.google.com/store/apps/details?id=com.pzet.nmscompanions"><button>View on the Play Store</button></a>
+			</div>
 		</div>
 
 		<div class = "project">
-			<h2>Project 1</h2>
-			<img src="https://picsum.photos/400/300">
-			<p> 
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat vel tortor nec pulvinar. Donec fermentum erat ac sem congue pellentesque. Nunc varius, lacus at interdum molestie, metus magna pulvinar metus, vitae volutpat ante risus vel felis. Morbi vehicula erat euismod pharetra interdum. Ut laoreet nisi pulvinar, feugiat nunc eget, dapibus odio. Sed pharetra tincidunt lorem in accumsan. Praesent mattis lectus nec lorem pellentesque convallis. Pellentesque luctus eros nec augue sollicitudin porttitor. Nam mattis purus sit amet nisi congue laoreet.
-				Aenean accumsan nisl at dignissim eleifend. Donec cursus risus a enim feugiat egestas. Aenean malesuada, velit nec vestibulum sollicitudin, risus ex venenatis enim, et bibendum diam orci a nibh. 
-			</p>
-			<button>View on GitHub</button>
+			<h2>A Level Computer Science Revision Tool</h2>
+			<div class="imageCarousel">
+				<img src="assets/project2/alcsrt2.PNG" class="project2Image">
+				<img src="assets/project2/alcsrt5.PNG" class="project2Image">
+				<img src="assets/project2/alcsrt4.PNG" class="project2Image">
+				<img src="assets/project2/alcsrt3.PNG" class="project2Image">
+				<img src="assets/project2/alcsrt1.PNG" class="project2Image">
+
+				<a class = "back" onclick="plusSlides(-1)">&#10094</a>
+				<a class = "forward" onclick="plusSlides(1)">&#10095</a>
+
+			</div>
+			<div class = "projectDescription">
+				<h3>Java | JavaFX | Python</h3>
+				<p> 
+					A revision tool for A level computer science. Allows the user to study using 4 different modes. Interfaces with database for storing study content and account information. Makes use of freeTTS for text-to-speech.
+				</p>
+			</div>
+			<div class="buttonRow">
+				<a target="_blank" href="https://github.com/pzet123/ALevelComputerScienceRevisionTool"><button>View on GitHub</button></a>
+			</div>
 		</div>
 
 		<div class = "project">
-			<h2>Project 1</h2>
-			<img src="https://picsum.photos/400/300">
-			<p> 
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat vel tortor nec pulvinar. Donec fermentum erat ac sem congue pellentesque. Nunc varius, lacus at interdum molestie, metus magna pulvinar metus, vitae volutpat ante risus vel felis. Morbi vehicula erat euismod pharetra interdum. Ut laoreet nisi pulvinar, feugiat nunc eget, dapibus odio. Sed pharetra tincidunt lorem in accumsan. Praesent mattis lectus nec lorem pellentesque convallis. Pellentesque luctus eros nec augue sollicitudin porttitor. Nam mattis purus sit amet nisi congue laoreet.
-				Aenean accumsan nisl at dignissim eleifend. Donec cursus risus a enim feugiat egestas. Aenean malesuada, velit nec vestibulum sollicitudin, risus ex venenatis enim, et bibendum diam orci a nibh. 
-			</p>
-			<button>View on GitHub</button>
+			<h2>Command Line Text Editor</h2>
+			<img src="assets/cTextEditor.png">
+			<div class = "projectDescription">
+				<h3>C</h3>
+				<p> 
+					Command line editor written in pure C. Allows user to perform basic functions like creating, copying, deleting and displaying a 
+					file as well as specific line operations such as insert, append and delete.
+				</p>
+			</div>
+			<div class="buttonRow">
+				<a><button>Source code provided on request</button></a>
+			</div>
 		</div>
 
 	</div>
 
+	<script src="js/jquery-3.6.0.js"></script>
+	<script src="js/script.js"></script>
 
 	<footer>
 		<div>
 		  <h3>contact details:</h5>
 		  <ul>
-			  <li>Number: 07732827322</li>
-			  <li>Email: testEmail@test.com</li>
+			<li>Number: -</li>
+			<li>Email: soniapiotr@gmail.com</li>
 		  </ul>
 		</div>
   </footer>
-
-
-	<script src="js/jquery-3.6.0.js"></script>
-	<script src="js/script.js"></script>
 
 </body>
 </html>
