fixed home link

--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@
             <button id="navButton" onclick = "toggleMenu()">Navigation</button>
             
             <ul id="toggleMenu">
-                <li><a class="nav-link active" href="/">Home</a></li>
+                <li><a class="nav-link active" href="index.html">Home</a></li>
                 <li><a class="nav-link" href="projects.html">Projects</a></li>
                 <li><a class="nav-link" href="cv.html">CV</a></li>
             </ul> 
