Fixed image sizing on mobile devices

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
 				</p>
 			</div>
 			<div class="buttonRow">
-				<a target="_blank" href="https://github.com/pzet123/NMS_Companions"><button>View on GitHub</button></a>
+				<a target="_blank" href="https://github.com/pzet123/NMS_Companions"><button>View on my GitHub</button></a>
 				<a target="_blank" href="https://play.google.com/store/apps/details?id=com.pzet.nmscompanions"><button>View on the Play Store</button></a>
 			</div>
 		</div>
@@ -68,7 +68,7 @@
 				</p>
 			</div>
 			<div class="buttonRow">
-				<a target="_blank" href="https://github.com/pzet123/ALevelComputerScienceRevisionTool"><button>View on GitHub</button></a>
+				<a target="_blank" href="https://github.com/pzet123/ALevelComputerScienceRevisionTool"><button>View on my GitHub</button></a>
 			</div>
 		</div>
 
