Fixed no nav links bug and minor style adjustments

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 	<div id="content">
 		<p id="intro">I am a first year student at the University of Warwick currently pursuing a bachelor's degree in CS. I am currently working towards becoming a full-stack developer hence I am most interested in software development.</p>
+		<hr>
 		<div id="hobbies">
 		<h2>Hobbies</h2>
 		<uL>
@@ -42,6 +43,7 @@
 			<li>Reading</li>
 		</uL>
 		</div>
+		<hr>
 		<div id="readingList">
 			<h2>Reading List</h2>
 			<h3>Fiction</h3>
@@ -50,6 +52,7 @@
 				<li><b>Metro 2033</b> - Dmitry Glukhovsky</li>
 				<li><b>Roadside Picnic</b> - Arkady Strugatsky and Boris Strugatsky</li>
 				<li><b>Gates of Fire</b> - Steven Pressfield</li>
+				<li><b>Clash Of Empires: The Great Siege</b> - William Napier</li>
 				<li><b>Maze Runner</b> - James Dashner</li>
 			</ul>
 			<h3>Non-Fiction</h3>
@@ -66,6 +69,7 @@
 				<li><b>The Mundanity of Excellence</b> - Daniel F. Chambliss</li>
 				<li><b>Ego is the Enemy</b> - Ryan Holiday</li>
 				<li><b>Peak: Secrets from the New Science of Expertise</b> - Anders Ericsson</li>
+				<li><b>The New Science of Learning : How to Learn in Harmony with Your Brain</b> - Terry Doyle, Todd Zakrajsek</li>
 			</ul>
 		</div>
 	</div>
