modified front page style

--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@
 
 <body>
 	<div id="navbar">
-		<h1 id="title">Piotr Zychlinski</h1>
-
-		<ul id="social-media-links">
-			<li><img src = "assets/github_icon.png" height="15px" width="15px"><a href="https://github.com/pzet123" target="_blank">Github</a></li>
-			<li><img src = "assets/stackoverflow_icon.png" height="15px" width="15px"><a href="https://stackoverflow.com/users/13776031/pzet" target="_blank">Stack Overflow</a></li>
-			<li><img src = "assets/linkedin_icon.png" width="15px" height="15px"><a href="https://www.linkedin.com/in/piotr-zychlinski-63a205226/" target="_blank">LinkedIn</a></li>
-		</ul>
-
+		<h2 id="navbarTitle">Piotr Zychlinski</h2>
+		
 		<button id="navButton" onclick = "toggleMenu()">Navigation</button>
 		
 		<ul id="toggleMenu">
@@ -29,6 +23,21 @@
 			<li><a class="nav-link" href="projects.html"> Projects</a></li>
 			<li><a class="nav-link" href="cv.html">CV</a></li>
 		</ul> 
+	</div>
+
+	<div id="frontPage">
+		<h1 id="title">Piotr <br> 
+					   Żychliński
+		</h1>
+		<h2 id="subtitle">
+			Computer Science student at the University of Warwick
+		</h2>
+		<ul id="social-media-links">
+			<li><img src = "assets/github_icon.png" height="15px" width="15px"><a href="https://github.com/pzet123" target="_blank">Github</a></li>
+			<li><img src = "assets/stackoverflow_icon.png" height="15px" width="15px"><a href="https://stackoverflow.com/users/13776031/pzet" target="_blank">Stack Overflow</a></li>
+			<li><img src = "assets/linkedin_icon.png" width="15px" height="15px"><a href="https://www.linkedin.com/in/piotr-zychlinski-63a205226/" target="_blank">LinkedIn</a></li>
+		</ul>
+
 	</div>
 
 	<div id="content">
@@ -81,6 +90,7 @@
 				<li>Number: -</li>
 				<li>Email: soniapiotr@gmail.com</li>
 	        </ul>
+			<p id="copyright">Copyright © Piotr Zychlinski 2022</p>
 	  	</div>
 	</footer>
 
