--- a/projects.html
+++ b/projects.html
@@ -14,14 +14,8 @@
 <body>
 
 	<div id="navbar">
-		<h1 id="title">Piotr Zychlinski</h1>
-
-		<ul id="social-media-links">
-			<li><img src = "assets/github_icon.png" height="15px" width="15px"><a href="https://github.com/pzet123" target="_blank">Github</a></li>
-			<li><img src = "assets/stackoverflow_icon.png" height="15px" width="15px"><a href="https://stackoverflow.com/users/13776031/pzet" target="_blank">Stack Overflow</a></li>
-			<li><img src = "assets/linkedin_icon.png" width="15px" height="15px"><a href="https://www.linkedin.com/in/piotr-zychlinski-63a205226/" target="_blank">LinkedIn</a></li>
-		</ul>
-
+		<h2 id="navbarTitle">Piotr Zychlinski</h2>
+		
 		<button id="navButton" onclick = "toggleMenu()">Navigation</button>
 		
 		<ul id="toggleMenu">
