Added quest log to projects page

--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,22 @@
 	<div id="content">
 
 		<div class = "project">
+			<h2>Quest Log</h2>
+			<img src="assets/featureGraphic.png">
+			<div class = "projectDescription">
+				<h3>Flutter | Dart</h3>
+				<p> 
+					A to-do list application which mimics the quest log system often seen in RPG games. <br><br> As of 30/06/2022, the app has over 4000 downloads and 80 5-star ratings combined across the Google Play Store and the Apple App Store.
+				</p>
+			</div>
+			<div class="buttonRow">
+				<a target="_blank" href="https://github.com/pzet123/sTodo"><button>View on my GitHub</button></a>
+				<a target="_blank" href="https://play.google.com/store/apps/details?id=com.app.stodo"><button>View on the Play Store</button></a>
+				<a target="_blank" href="https://apps.apple.com/us/app/quest-log/id1625568037"><button>View on the App Store</button></a>
+			</div>
+		</div>
+
+		<div class = "project">
 			<h2>NMSC</h2>
 			<img src="assets/showcase_smaller.png">
 			<div class = "projectDescription">
