Styling changes and info update

--- a/cv.html
+++ b/cv.html
@@ -18,9 +18,9 @@
             <button id="navButton" onclick = "toggleMenu()">Navigation</button>
             
             <ul id="toggleMenu">
-                <li><a class="nav-link active" href="index.html">Home</a></li>
+                <li><a class="nav-link" href="index.html">Home</a></li>
                 <li><a class="nav-link" href="projects.html">Projects</a></li>
-                <li><a class="nav-link" href="cv.html">CV</a></li>
+                <li><a class="nav-link active" href="cv.html">CV</a></li>
             </ul> 
         </div>
     
@@ -71,7 +71,6 @@
 
                 </ul>
             </div> 
-            <hr>
             <div id="education">
                 <h2>Education</h2>
                 <h3>University Of Warwick</h3>
@@ -148,7 +147,6 @@
                     </tbody>
                 </table>
             </div>
-            <hr>
             <div id="qualifications">
             <h2>Qualifications</h2>
             <ul>
@@ -157,7 +155,7 @@
                 <li><a href="https://coursera.org/share/c0074565da0187198502e38cae0321be">HTML, CSS, and Javascript for Web Developers</a> (Coursera)</li>
             </ul>
             </div>
-            <hr>
+            <div id="skills">
             <h2>IT Skills</h2>
             <h3>Languages and frameworks:</h3>
             <ul>
@@ -179,7 +177,7 @@
            </ul>
            <h4>Familiarity with Windows and Linux-based operating systems</h3>
            <h4>Android App development including building and releasing an app on the play store</h3>
-
+           </div>
         </div>
 
         <footer>
