--- a/index.html
+++ b/index.html
@@ -26,33 +26,40 @@
 	</div>
 
 	<div id="frontPage">
-		<h1 id="title">Piotr <br> 
+		<h1 id="title">Piotr<br> 
 					   Żychliński
 		</h1>
 		<h2 id="subtitle">
 			Computer Science student at the University of Warwick
 		</h2>
 		<ul id="social-media-links">
-			<li><img src = "assets/github_icon.png" height="15px" width="15px"><a href="https://github.com/pzet123" target="_blank">Github</a></li>
-			<li><img src = "assets/stackoverflow_icon.png" height="15px" width="15px"><a href="https://stackoverflow.com/users/13776031/pzet" target="_blank">Stack Overflow</a></li>
-			<li><img src = "assets/linkedin_icon.png" width="15px" height="15px"><a href="https://www.linkedin.com/in/piotr-zychlinski-63a205226/" target="_blank">LinkedIn</a></li>
+			<li><div class="social-media-column">
+					<img src = "assets/github_icon.png" height="15px" width="15px">
+					<a href="https://github.com/pzet123" target="_blank">Github</a>
+			</div></li>
+			<li><div class="social-media-column">
+					<img src = "assets/stackoverflow_icon.png" height="15px" width="15px">
+					<a href="https://stackoverflow.com/users/13776031/pzet" target="_blank">Stack Overflow</a>
+			</div></li>
+			<li><div class="social-media-column">
+					<img src = "assets/linkedin_icon.png" width="15px" height="15px">
+					<a href="https://www.linkedin.com/in/piotr-zychlinski-63a205226/" target="_blank">LinkedIn</a>
+			</div></li>
 		</ul>
 
 	</div>
 
 	<div id="content">
 		<p id="intro">I am a first year student at the University of Warwick currently pursuing a bachelor's degree in CS. I am currently working towards becoming a full-stack developer hence I am most interested in software development.</p>
-		<hr>
 		<div id="hobbies">
 		<h2>Hobbies</h2>
 		<uL>
-			<li>Weightlifting (85kg benchpress, 110kg squat @ 75kg BW)</li>
+			<li>Weightlifting (85kg benchpress, 110kg squat @ 70kg BW)</li>
 			<li>Badminton</li>
 			<li><a href="https://play.google.com/store/apps/developer?id=Pzet">App Development</a></li>
 			<li>Reading</li>
 		</uL>
 		</div>
-		<hr>
 		<div id="readingList">
 			<h2>Reading List</h2>
 			<h3>Fiction</h3>
