--- a/projects.html
+++ b/projects.html
@@ -15,12 +15,10 @@
 
 	<div id="navbar">
 		<h2 id="navbarTitle">Piotr Zychlinski</h2>
-		
 		<button id="navButton" onclick = "toggleMenu()">Navigation</button>
-		
 		<ul id="toggleMenu">
-			<li><a class="nav-link active" href="index.html">Home</a></li>
-			<li><a class="nav-link" href="projects.html">Projects</a></li>
+			<li><a class="nav-link" href="index.html">Home</a></li>
+			<li><a class="nav-link active" href="projects.html">Projects</a></li>
 			<li><a class="nav-link" href="cv.html">CV</a></li>
 		</ul> 
 	</div>
@@ -33,13 +31,13 @@
 			<div class = "projectDescription">
 				<h3>Flutter | Dart</h3>
 				<p> 
-					A to-do list application which mimics the quest log system often seen in RPG games. <br><br> As of 30/06/2022, the app has over 4000 downloads and 80 5-star ratings combined across the Google Play Store and the Apple App Store.
+					A to-do list application which mimics the quest log system often seen in RPG games. <br><br> As of writing, the app has over 4000 downloads and 100 5-star ratings combined across the Google Play Store and the Apple App Store.
 				</p>
 			</div>
 			<div class="buttonRow">
-				<a target="_blank" href="https://github.com/pzet123/sTodo"><button>View on my GitHub</button></a>
-				<a target="_blank" href="https://play.google.com/store/apps/details?id=com.app.stodo"><button>View on the Play Store</button></a>
-				<a target="_blank" href="https://apps.apple.com/us/app/quest-log/id1625568037"><button>View on the App Store</button></a>
+				<a target="_blank" href="https://github.com/pzet123/sTodo"><button>GitHub</button></a>
+				<a target="_blank" href="https://play.google.com/store/apps/details?id=com.app.stodo"><button>Play Store</button></a>
+				<a target="_blank" href="https://apps.apple.com/us/app/quest-log/id1625568037"><button>App Store</button></a>
 			</div>
 		</div>
 
@@ -49,12 +47,12 @@
 			<div class = "projectDescription">
 				<h3>Flutter | Dart</h3>
 				<p> 
-					A companion app to the popular space exploration game No Man's Sky. <br><br> As of 06/05/2022, the app has over 500 downloads on the Google play store.
+					A companion app to the popular space exploration game No Man's Sky. <br><br> As of writing, the app has over 900 downloads on the Google play store.
 				</p>
 			</div>
 			<div class="buttonRow">
-				<a target="_blank" href="https://github.com/pzet123/NMS_Companions"><button>View on my GitHub</button></a>
-				<a target="_blank" href="https://play.google.com/store/apps/details?id=com.pzet.nmscompanions"><button>View on the Play Store</button></a>
+				<a target="_blank" href="https://github.com/pzet123/NMS_Companions"><button>GitHub</button></a>
+				<a target="_blank" href="https://play.google.com/store/apps/details?id=com.pzet.nmscompanions"><button>Play Store</button></a>
 			</div>
 		</div>
 
