Added news articles about QL to project page

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
 			<div class = "projectDescription">
 				<h3>Flutter | Dart</h3>
 				<p> 
-					A to-do list application which mimics the quest log system often seen in RPG games. <br><br> As of writing, the app has over 4000 downloads and 100 5-star ratings combined across the Google Play Store and the Apple App Store.
+					A to-do list application which mimics the quest log system often seen in RPG games. <br><br> As of writing, the app has over 4000 downloads and 100 5-star ratings combined across the Google Play Store and the Apple App Store. The app has also been featured on <a href="https://gamerant.com/skyrim-fan-quest-log-to-do-list-app/">GameRant</a> and <a href="https://www.gamebyte.com/skyrim-productivity-app/">GameByte</a>
 				</p>
 			</div>
 			<div class="buttonRow">
